Updates Made in this commit: .) mYjdbc Method updates
Next To Do:
.)

Previous Updates:
.)

Errors
.)